Affected items: tidy up the UI by correctly aligning icons, and only showing them on hover

--- a/thebuggenie/css/oxygen.css
+++ b/thebuggenie/css/oxygen.css
@@ -683,7 +683,8 @@ tr.attached_item td { padding-bottom: 5px; padding-top: 5px; }
 tr.attached_item td { font-size: 0.9em; line-height: 1.3; }
 tr.attached_item td .upload_details { color: #AAA; font-size: 0.9em; }
 
-table.issue_affects td { padding: 3px;}
+table.issue_affects td { padding: 3px; }
+table.issue_affects td img { vertical-align: bottom; }
 #viewissue_left_box_top table.issue_affects th { background: rgb(244, 236, 139); border-bottom-color: #e3dda5; }
 /* end view issue styling */
 
